# pytorch

./: amd_apply_patch.sh  amd_create_patch.sh  do_hipify.sh  setup.py
amd_build/: build_pytorch_amd.py  constants.py  cp.py  cuda_to_hip.py  cuda_to_hip_mappings.py  disabled.yaml  disabled_features.yaml  disabled_funcs.yaml  gains.cpp  patch084e3a7.patch
amd_patch_files/: aten.patch  setup.patch  torch.patch
aten/: CMakeLists.txt  CMakeLists.txt.hip
aten/amd_patch_files/: aten.patch
aten/src/ATen/: ATen.h  CMakeLists.txt  CMakeLists.txt.hip  Config.h.in  Context.cpp  Context.h  Half.cpp  Half.h  preprocess_declarations.py
aten/src/TH/: CMakeLists.txt  THAllocator.c  THDiskFile.c  THMemoryFile.c  THStorage.c
aten/src/THC/: CMakeLists.txt.hip  THCApply.cuh  THCApply.cuh.hip  THCAsmUtils.cuh  THCAtomics.cuh  THCBlas.cu.hip  THCCachingAllocator.cpp  THCDeviceTensor-inl.cuh  THCDeviceUtils.cuh  THCGeneral.cpp  THCGeneral.cpp.hip  THCGeneral.h.in  THCGeneral.h.in.hip  THCNumerics.cuh  THCNumerics.cuh.hip  THCReduce.cuh  THCReduceAll.cuh  THCStream.cpp  THCStream.h  THCTensorConv.cu  THCTensorIndex.cu  THCTensorInfo.cuh  (+15 more)
aten/src/THNN/: CMakeLists.txt
aten/src/THS/: CMakeLists.txt
test/: run_nn_tests_amd.sh  test_jit.py
tools/: build_pytorch_libs.sh  pytorch.version
tools/autograd/: derivatives.yaml
tools/setup_helpers/: miopen.py  rocm.py
torch/csrc/: DynamicTypes.cpp  Module.cpp  THP_API.h  allocators.cpp  allocators.h  utils.cpp  utils.h
torch/cuda/: __init__.py
torch/lib/: build_all.sh  build_libs.sh  dothc.sh  dothcs.sh  dothcunn.sh
(+222 files in other folders)
