set(ATen_CPU_SRCS ${ATen_CPU_SRCS}
  ${CMAKE_CURRENT_SOURCE_DIR}/init.cpp
PARENT_SCOPE)

ADD_LIBRARY(THNN SHARED init.cpp)

IF(NOT TH_LIBRARIES)
  SET(TH_LIBRARIES "TH")
ENDIF(NOT TH_LIBRARIES)

TARGET_LINK_LIBRARIES(THNN ${TH_LIBRARIES})

INSTALL(TARGETS THNN
  RUNTIME DESTINATION "${AT_INSTALL_BIN_DIR}"
  LIBRARY DESTINATION "${AT_INSTALL_LIB_DIR}"
  ARCHIVE DESTINATION "${AT_INSTALL_LIB_DIR}")

INSTALL(FILES THNN.h DESTINATION "${ATEN_INSTALL_INCLUDE_SUBDIR}/THNN")
INSTALL(FILES generic/THNN.h DESTINATION "${ATEN_INSTALL_INCLUDE_SUBDIR}/THNN/generic")
